Se renombran todos los delegados. Se cambia un poco la jerarquía de clases